--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -17,6 +17,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "outDir": "dist",
     "plugins": [
       {
         "name": "next"
